gcc/testsuite/gdc.test/compilable/imports/test14666a.d
module imports.test14666a;

auto getNames()
{
    import imports.test14666b;
    return "";
}

enum Names = getNames;
