gcc/testsuite/gdc.test/fail_compilation/imports/fail19609d.d
deprecated(msg) module imports.fail19609d;
enum msg = "You won't see this either";
